# Exo-Lib

./: .gitignore  LICENSE  MANIFEST.in  README.md  debug_import.py  pyproject.toml
.github/workflows/: publish.yml  update_assets.yml
examples/: custom_grid.py  manage_assets.py  standard_inventory.py
src/exo_inventory/: __init__.py  __main__.py  assets.py  renderer.py
src/exo_inventory/data/versions/1.13.2/1.13.2/: changes.json  manifest.json
src/exo_inventory/data/versions/1.14.4/1.14.4/: changes.json  manifest.json
src/exo_inventory/data/versions/1.15.2/1.15.2/: changes.json  manifest.json
src/exo_inventory/data/versions/1.16.5/1.16.5/: changes.json  manifest.json
src/exo_inventory/data/versions/1.17.1/1.17.1/: changes.json  manifest.json
src/exo_inventory/data/versions/1.18.2/1.18.2/: changes.json  manifest.json
src/exo_inventory/data/versions/1.19.4/1.19.4/: changes.json  manifest.json
src/exo_inventory/data/versions/1.20.6/1.20.6/: changes.json  manifest.json
src/exo_inventory/data/versions/1.21.10/1.21.10/: changes.json  manifest.json
src/exo_inventory/data/versions/1.21.4/1.21.4/: changes.json  manifest.json
src/exo_inventory/data/versions/1.21.5/1.21.5/: changes.json  manifest.json
src/exo_inventory/data/versions/1.21.6/1.21.6/: changes.json
tests/: test_basic.py
