[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exo-inventory"
version = "0.1.0"
description = "Minecraft Inventory Rendering and Asset Management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0.0",
    "aiohttp>=3.8.0",
    "discord.py>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exo_inventory = ["data/**", "data/ui/*.png", "data/versions/**/*.png"]
